# VersoVector

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-frontend.txt  requirements-mlops.txt  requirements-test.txt  requirements-umap.txt  requirements.txt  tox.ini
apps/: README.md
apps/frontend/: README.md  app.py  client.py  tag_catalog.py  ui_formatters.py
artifacts/model_bundle/: model_config.toml
configs/: model_config.toml
data/: vallejo_poems_en.csv
docs/: model_topology.md
infra/gcp-cloud-run-blueprint/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
modules/: __init__.py
modules/classification/: __init__.py  label_filtering.py  stacking_pipeline.py
modules/clustering/: __init__.py  gmm.py  kmeans.py  lda_topics.py  similarity.py
modules/evaluation/: __init__.py  cluster_metrics.py  multilabel_metrics.py
modules/features/: README.md  __init__.py  feature_checks.py  feature_pipeline.py  transformers.py
modules/integration/: __init__.py  result_integration.py
modules/io/: __init__.py  artifact_store.py
modules/preprocesing/: clean_text.py  cli_clean_text.py
modules/preprocessing/: __init__.py  clean_text.py  cli_clean_text.py
notebook/: 01_cleaning_pipeline.ipynb  02_embeddings_unsupervised.ipynb  02_feature_pipeline.ipynb  03_embeddings_supervised.ipynb  04_embeddings_unsupervised.ipynb  05_supervised_unsupervised_integration.ipynb  06_visualizations.ipynb
services/: README.md  compose.yaml
services/api/: Dockerfile  README.md
services/frontend/: .dockerignore  Dockerfile  README.md
src/preprocessing/: load_poem_sentiment.py  load_vallejo.py
src/versovector/: README.md
src/versovector/api/: __init__.py  dependencies.py  main.py  schemas.py  settings.py
src/versovector/inference/: __init__.py  artifact_loader.py  poem_analyzer.py  schemas.py  similarity_search.py  tag_predictor.py  topic_clusterer.py
src/versovector/training/: build_dataset.py  mlflow_utils.py  register_model.py  train_features.py  train_supervised.py  train_unsupervised.py
src/visualizations/: plot_clusters_2d.py  visualize_tfidf_vectors.py
tests/: README.md  conftest.py
tests/integration/: test_api_endpoints.py  test_model_bundle_loading.py  test_poem_analyzer_end_to_end.py
tests/unit/: test_artifact_store.py  test_inference_schemas.py  test_preprocessing.py  test_similarity_search.py  test_tag_predictor.py
utils/: __init__.py  constants.py  hashing.py
