[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "versovector"
version = "0.1.0"
description = "Emotional-semantic recommendation for poetic and lyrical language."
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hubert Ronald" }
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "spacy",
    "nltk",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "tox",
    "mypy",
    "build",
    "ipykernel",
    "jupyter",
]
mlops = [
    "mlflow",
]
api = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]
umap = [
    "umap-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100 # max-line-length flake8 (100)
target-version = ['py310'] 

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1